--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,11 +55,19 @@ jobs:
           destination: test-results
   
   deploy:
-    machine:
-      image: circleci/classic:edge
+    docker:
+      - image: circleci/ruby:2.5.3-node-browsers
+    working_directory: /tmp/repo
     steps:
       - checkout
-
+      - run:
+          name: 'Install Heroku CLI, if necessary'
+          command: |
+            if [[ $(command -v heroku) == "" ]]; then
+              curl https://cli-assets.heroku.com/install.sh | sh
+            else
+              echo "Heroku is already installed. No operation was performed."
+            fi
       - run:
           name: Deploy to Heroku
           command: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
