--- a/config/database.yml
+++ b/config/database.yml
@@ -53,6 +53,6 @@ production:
   adapter: postgresql
   encoding: unicode
   pool: 5
-  database: message-board_production
-  username: message-board
-  password: <%= ENV['MESSAGE-BOARD_DATABASE_PASSWORD'] %>
+  database: engineer-link-app_production
+  username: engineer-link
+  password: <%= ENV['ENGINEER-LINK-APP_DATABASE_PASSWORD'] %>
